@@ -1,7 +1,7 @@
-		-*- org -*-->  Emacs [Tab] key + [Org] menu; C-c C-o follows links
+	-*- org -*-->  Emacs [Tab] key + [Org] menu; C-c C-o follows links
 * Very Short Term
-** TODO 33) Add regr.tests for new dgamma(<mpfr>) !!
-** TODO 32) .getPrec() should be documented {slightly}; .getSign(), .mpfr(), .erange()... -- at least *internal* (e.g. roxygen)
+** TODO 56) Add regr.tests for new dgamma(<mpfr>) !!
+** TODO 55) .getPrec() should be documented {slightly}; .getSign(), .mpfr(), .erange()... -- at least *internal* (e.g. roxygen)
 ** TODO 31) Valgrind problems + leaks: Brian's e-mail 2014-06-19; ~/R/Pkgs/Rmpfr.Rcheck_valgrind/
 ** TODO 11) format() method for "mpfr", "mpfrArray" (and hence "mpfrMatrix") which nicely
     and correctly *jointly* formats (for "mpfr") and aligns columns !
@@ -82,7 +82,6 @@
     -- see  MPFR_RNDN in src/utils.c and others; --> use src/convert.c  R_rnd2MP()
     -- and all the SEXP functions get an additional   SEXP rnd_mode
        argument, the same as   SEXP d2mpfr1() in src/convert.c has already.
-** DONE 27) Now have simple sapplyMpfr()
 ** TODO 29) Our sum() should use system mpfr_sum() :
    mpfr_sum (mpfr_t ROP, mpfr_ptr const TAB[], unsigned long int N, mpfr_rnd_t RND)
 ** TODO 32) Use ./LUP.R  to compute the lu() decomposition of an mpfrMatrix
@@ -218,3 +217,5 @@
 ** DONE 25) mpfr(<mpfr>, ...) should work: return argument unchanged *if* precision
     and rounding mode are ok; otherwise use roundMpfr() *BUT* that needs an
     additional rnd.mode  argument -- as mpfr
+** DONE 27) Now have simple sapplyMpfr()
+** DONE 57) Fix pnorm() bugs reported by Jerry Lewis (>> ~/R/MM/Pkg-ex/Rmpfr/pnorm-* )
